--- a/Counties.ipynb
+++ b/Counties.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will make use of the following libraries in our analysis."
+    "We will make use of the following libraries in this notebook:"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We read the csv files with the results by county in percent format. The data is taken from the website of the [National Electoral Commission](https://wybory.gov.pl/prezydent20200628/en/dane_w_arkuszach). Poland uses comma as a decimal separator, so we convert the data to dot-separated numbers. "
+    "We read the csv files with the results by county given as a percentage. The data is taken from the website of the [National Electoral Commission](https://wybory.gov.pl/prezydent20200628/en/dane_w_arkuszach). Poland uses comma as a decimal separator. We convert the data to dot-separated numbers so that it works better with the libraries."
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simultaneusly, we import the geographical data about borders of each county from the official data of the [Head Office of Geodesy and Cartography](http://www.gugik.gov.pl/pzgik/dane-bez-oplat/dane-z-panstwowego-rejestru-granic-i-powierzchni-jednostek-podzialow-terytorialnych-kraju-prg). The webiste of [GIS Support PL](https://gis-support.pl/granice-administracyjne/) let us solely download the package with counties. To create maps I will use GeoJSON format. The data from the websites mentioned before has the *.shp* extension, so I have formatted it to GeoJSON using [MapShaper](https://mapshaper.org)."
+    "Additionally, we import the geographical data about borders of each county. The data is derived from the [Head Office of Geodesy and Cartography](http://www.gugik.gov.pl/pzgik/dane-bez-oplat/dane-z-panstwowego-rejestru-granic-i-powierzchni-jednostek-podzialow-terytorialnych-kraju-prg). The webiste of [GIS Support PL](https://gis-support.pl/granice-administracyjne/) let us solely download the package with counties. To create maps I will use GeoJSON format. The data from the websites mentioned before has the *.shp* extension, so I have formatted it to GeoJSON using [MapShaper](https://mapshaper.org)."
    ]
   },
   {
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The TERYT code is a unique code of each administrative unit. In the elections result the code has two extra 00. Additionally, it doesn't have a leading zero when its voivodeship number is only one digit. We are going to fix this issues to connect these two data sets."
+    "The TERYT code is a unique code of each administrative unit. In the election results the code has two extra 0s. Additionally, it doesn't have a leading zero when a voivodeship number consists only of one digit. We are going to fix these issues to connect these two data sets."
    ]
   },
   {
@@ -216,7 +216,7 @@
     "    \"\"\"Get figure showing a map of results of the given cadidate by county.\"\"\"\n",
     "    candidate_df = results_counties_percent_df[['Kod TERYT', 'Powiat', candidate]]\n",
     "    \n",
-    "    # We remove the results from ships and abroad because they will not be shown on the map\n",
+    "    # We remove the results from ships and abroad because they will not be shown on the map.\n",
     "    candidate_df = candidate_df[candidate_df.Powiat != 'statki']\n",
     "    candidate_df = candidate_df[candidate_df.Powiat != 'zagranica']\n",
     "    \n",
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Who did win in each county?"
+    "## Who won in each county?"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyzing these maps, one can see that for some candidates the electorate is spread similarly around the whole country. Meanwhile, the others have much greater support in some regions. Who is the candidate with the most equally spread electorate?"
+    "Analyzing these maps, one can see that for some candidates their voters are spread similarly around the whole country. Meanwhile, the others have much greater support in some regions. Who is the candidate of the most equally spread electorate?"
    ]
   },
   {
@@ -557,14 +557,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How many voters will not have their candidate of the first choice in the second round?"
+    "## How many voters will not have their first-choice candidate in the second round?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The crucial challange Andrzej Duda and Rafał Trzaskowski will need to face in the second round is to convince the voters who did not vote them in the first round. What counties have the most voters to convince? In other words, what counties should the two candidates focus on the most in the campaign?"
+    "The crucial challange Andrzej Duda and Rafał Trzaskowski will need to face in the second round is to convince the voters who did not vote for them in the first round. Which counties have the most voters to convince? In other words, what counties should the two candidates focus on the most in the campaign?"
    ]
   },
   {
@@ -706,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
